--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Camara</string>
     <string name="shot">Disparar</string>
     <string name="Description_foto">Muestra la foto tras tomarla</string>
+    <string name="save">Guardar</string>
 </resources>
